기초자료 등록 오류 수정. BOM lv 수정 필요

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -32,7 +32,7 @@
     "dashboard": "대시보드",
     "material": "자재 관리",
     "materialReceiving": "자재 입고",
-    "materialStock": "재고 현황",
+    "materialStock": "자재 재고 현황",
     "production": "생산 관리",
     "process": "공정 모니터링",
     "inspection": "품질 검사",
@@ -78,7 +78,7 @@
     "lotNumber": "LOT 번호",
     "productCode": "품번",
     "productName": "품명",
-    "materialCode": "자재코드",
+    "materialCode": "자재품번",
     "materialName": "자재명",
     "quantity": "수량",
     "unit": "단위",
