--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -32,7 +32,7 @@
     "dashboard": "Bảng điều khiển",
     "material": "Quản lý vật tư",
     "materialReceiving": "Nhập vật tư",
-    "materialStock": "Tồn kho",
+    "materialStock": "Tồn kho vật tư",
     "production": "Quản lý sản xuất",
     "process": "Giám sát quy trình",
     "inspection": "Kiểm tra chất lượng",
@@ -78,7 +78,7 @@
     "lotNumber": "Số LOT",
     "productCode": "Mã sản phẩm",
     "productName": "Tên sản phẩm",
-    "materialCode": "Mã vật tư",
+    "materialCode": "Mã số vật tư",
     "materialName": "Tên vật tư",
     "quantity": "Số lượng",
     "unit": "Đơn vị",
