바코드 구현 수정

--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -192,5 +192,48 @@
     "testPrint": "테스트 인쇄",
     "autoBackup": "자동 백업",
     "backupInterval": "백업 주기"
+  },
+  "document": {
+    "title": "생 산 전 표",
+    "basic_info": "▶ 기본 정보",
+    "voucher_number": "전표번호",
+    "process": "공정",
+    "issue_date": "발행일시",
+    "product_code": "품번",
+    "product_name": "품명",
+    "quantity": "수량",
+    "operator": "작업자",
+    "remarks": "비고",
+    "line": "라인",
+    "crimp_product_code": "절압착품번",
+    "finished_product_code": "완제품품번",
+    "quantity_info": "▶ 수량 정보",
+    "planned_qty": "계획 수량",
+    "completed_qty": "완료 수량",
+    "defect_qty": "불량 수량",
+    "carry_over_out": "이월 출고",
+    "input_materials": "▶ 투입 자재 / 투입 이력",
+    "table_no": "No",
+    "table_type": "유형",
+    "table_product_code": "품번",
+    "table_product_name": "품명",
+    "table_lot": "LOT번호",
+    "table_qty": "수량",
+    "type_material": "자재",
+    "type_history": "이력",
+    "type_prev_process": "전공정",
+    "barcode_section": "▶ 바코드",
+    "sign_create": "작성",
+    "sign_review": "검토",
+    "sign_approve": "승인"
+  },
+  "label_print": {
+    "product_code_prefix": "품번:",
+    "lot_prefix": "LOT:",
+    "quantity_prefix": "수량:",
+    "date_prefix": "일시:",
+    "bundle_title": "[BUNDLE] 묶음 바코드",
+    "set_qty": "SET:",
+    "total_qty": "Total:"
   }
 }
