--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -192,5 +192,48 @@
     "testPrint": "In thử",
     "autoBackup": "Sao lưu tự động",
     "backupInterval": "Chu kỳ sao lưu"
+  },
+  "document": {
+    "title": "PHIẾU SẢN XUẤT",
+    "basic_info": "▶ Thông tin cơ bản",
+    "voucher_number": "Số phiếu",
+    "process": "Quy trình",
+    "issue_date": "Ngày phát hành",
+    "product_code": "Mã SP",
+    "product_name": "Tên SP",
+    "quantity": "Số lượng",
+    "operator": "Công nhân",
+    "remarks": "Ghi chú",
+    "line": "Dây chuyền",
+    "crimp_product_code": "Mã dập",
+    "finished_product_code": "Mã thành phẩm",
+    "quantity_info": "▶ Thông tin số lượng",
+    "planned_qty": "SL kế hoạch",
+    "completed_qty": "SL hoàn thành",
+    "defect_qty": "SL lỗi",
+    "carry_over_out": "Chuyển tiếp",
+    "input_materials": "▶ Vật tư đầu vào / Lịch sử",
+    "table_no": "STT",
+    "table_type": "Loại",
+    "table_product_code": "Mã SP",
+    "table_product_name": "Tên SP",
+    "table_lot": "Số LOT",
+    "table_qty": "SL",
+    "type_material": "Vật tư",
+    "type_history": "Lịch sử",
+    "type_prev_process": "QT trước",
+    "barcode_section": "▶ Mã vạch",
+    "sign_create": "Lập",
+    "sign_review": "Kiểm tra",
+    "sign_approve": "Duyệt"
+  },
+  "label_print": {
+    "product_code_prefix": "Mã SP:",
+    "lot_prefix": "LOT:",
+    "quantity_prefix": "SL:",
+    "date_prefix": "Ngày:",
+    "bundle_title": "[BUNDLE] Mã vạch gộp",
+    "set_qty": "SET:",
+    "total_qty": "Tổng:"
   }
 }
